fix caching of ScQueryItem values for multiple entries (tdf#146037)

The code assumed that there would be only one ScQueryEntry.

Change-Id: Idf4cc6bdbbf1edad7d13eb9a9643bb67e199dd01
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126368
Tested-by: Luboš Luňák <l.lunak@collabora.com>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>